--- a/scss/02-molecules/lists/_list.scss
+++ b/scss/02-molecules/lists/_list.scss
@@ -9,7 +9,6 @@
     gap: .5rem;
 
     .list--item {
-      display: flex;
       padding: .5rem;
       background-color: white;
       border-radius: 3px;
